namespace ApplicationLayer.Commands
{
    public class CreateTeamCommand
    {
        public string Name { get; set; } = string.Empty;
    }
}