namespace ApplicationLayer.Services
{
    public class ProjectFactory
    {
    }
}