namespace PresentationLayer.DTOs
{
    public class CreateTeam_DTO
    {
        public string Name { get; set; } = string.Empty;
    }
}